# edgetech-axis-ptz-controller

./: .bashrc  .gitignore  CONTRIBUTING.md  README.md  axis-ptz-controller-wo-mqtt.env  axis-ptz-controller.env  docker-compose.yaml  docker-compose.yml  template.axis-ptz-controller.env
.github/workflows/: code-quality.yaml  code-quality.yml  docker-build.yaml  docker-build.yml  docker-test.yaml  dockerbuild.yml  release-tag.yaml  releasetag.yml
axis-ptz-controller/: .gitignore  Dockerfile  axis_ptz_controller.py  axis_ptz_utilities.py  camera.py  camera_configuration.py  camera_control.py  object.py  pyproject.toml  test_integration.py  test_messages.py  test_modules.py
axis-ptz-controller/data/: A19A08-processed-track.csv  A1E946-processed-track.csv  config_msg.json  object_msg.json  orientation_msg_data_0s.json  orientation_msg_data_90s.json
template/: template_pub_sub.py
tests/: axis-ptz-controller.env  docker-compose.yaml  test-harness.env  test.sh  test_integration.py  test_modules.py
tests/test-data/: test-input.json
tests/test-data/unit-test-data/: config_msg_data.json  object_msg_data.json
utils/: Analysis-PanRate.ipynb  panRateAnalysis.py
